Fix: Compatibility with Java 11